--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,12 @@ body {
   background-color: #F1F1F1;
 }
 
+.container {
+  max-width: 1260px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 30px;
+}
 
 ._hover01:hover {
   background-color: #33399b;
@@ -79,6 +85,26 @@ body {
   display: block;
 }
 
+._orange {
+  background-color: #FFE4C2;
+  color: #FF6D00;
+}
+
+._green {
+  background-color: #B4FDD1;
+  color: #06B16E;
+}
+
+._purple {
+  background-color: #E9D4FF;
+  color: #9A48F1;
+}
+
+._gray {
+  background: #94A6BE;
+  color: #FFFFFF;
+}
+
 ._active-category {
   opacity: 1 !important;
 }
@@ -90,6 +116,7 @@ body {
 }
 
 .pop-exit {
+  display: none;
   width: 100%;
   height: 100%;
   min-width: 320px;
@@ -513,6 +540,7 @@ body {
 }
 
 .pop-browse {
+  display: none;
   width: 100%;
   height: 100%;
   min-width: 375px;
@@ -685,6 +713,22 @@ body {
   display: none;
 }
 
+.header {
+  width: 100%;
+  margin: 0 auto;
+  background-color: #FFFFFF;
+}
+.header__block {
+  height: 70px;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  top: 0;
+  left: 0;
+  padding: 0 10px;
+}
 .header__logo img {
   width: 85px;
 }
@@ -1042,4 +1086,4 @@ body {
   .pop-exit__form-group {
     display: block;
   }
-}
+}/*# sourceMappingURL=main.css.map */
