--- a/css/main.css
+++ b/css/main.css
@@ -148,15 +148,15 @@ body {
   border: 0.7px solid #D4DBE5;
   box-shadow: 0px 4px 67px -12px rgba(0, 0, 0, 0.13);
 } */
-.pop-exit__ttl h2 {
+/* .pop-exit__ttl h2 {
   text-align: center;
   font-size: 20px;
   font-weight: 700;
   line-height: 30px;
   letter-spacing: -0.4px;
   margin-bottom: 20px;
-}
-.pop-exit__exit-yes {
+} */
+/* .pop-exit__exit-yes {
   width: 153px;
   height: 30px;
   background-color: #565EEF;
@@ -172,7 +172,7 @@ body {
   letter-spacing: -0.14px;
   color: #FFFFFF;
   margin-right: 10px;
-}
+} */
 .pop-exit__exit-yes a {
   width: 100%;
   height: 100%;
@@ -181,7 +181,7 @@ body {
   align-items: center;
   justify-content: center;
 }
-.pop-exit__exit-no {
+/* .pop-exit__exit-no {
   width: 153px;
   height: 30px;
   background-color: transparent;
@@ -196,7 +196,7 @@ body {
   font-weight: 500;
   letter-spacing: -0.14px;
   color: #FFFFFF;
-}
+} */
 .pop-exit__exit-no a {
   width: 100%;
   height: 100%;
