--- a/kanban-project/src/App.css
+++ b/kanban-project/src/App.css
@@ -909,6 +909,27 @@ body {
   letter-spacing: 0.2px;
 }
 
+.radio-toolbar input[type="radio"] {
+  display: none;
+}
+
+.radio-toolbar label {
+  display: inline-block;
+  padding: 2px 9px;
+  cursor: pointer;
+  border: 1px solid #DAD0FF;
+}
+
+.radio-toolbar input[type="radio"]:checked+label {
+  background-color: #d0ffb7;
+  border: 1px solid #1CA92E;
+}
+
+.radio-toolbar label:hover {
+  background-color: #d0ffb7;
+  border: 1px solid #1CA92E;
+}
+
 @media screen and (max-width: 1200px) {
   .main__block {
     width: 100%;
