--- a/kanban-project/src/App.css
+++ b/kanban-project/src/App.css
@@ -763,6 +763,7 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #565EEF;
+  cursor: pointer;
 }
 .header__user::after {
   content: "";
